
Tue Mar 28 10:31:25 PST 2000
(Mandrake)

fixed maximize bug where it would pay attention to iconified windows.

-------------------------------------------------------------------------------

Thu Mar 30 15:43:39 PST 2000
(Mandrake)

fixed logout dialog box to work properly under xinerama

-------------------------------------------------------------------------------

Thu Mar 30 18:21:59 PST 2000
(Mandrake)

fix for maximize to ignore iconified windows
fixed dock app support
fix to speed up epplets by merging snap saves in timer event
fixed ascents in I18N fonts
minor initialization fix in eesh


-------------------------------------------------------------------------------

Fri Mar 31 10:38:09 PST 2000
(Mandrake)

some people have problems with this session.c (don't know why)

-------------------------------------------------------------------------------

Mon Apr  3 10:17:21 PDT 2000
(Mandrake)

fix for iconified windows not getting focus properly when in focuslist.

-------------------------------------------------------------------------------

Mon Apr  3 12:00:47 PDT 2000
(Mandrake)

the remembered settings dialog was too big.  This has less information in it
but isn't so big when I have a lot of remembered windows on screen.

-------------------------------------------------------------------------------

Mon Apr  3 15:07:12 PDT 2000
(Mandrake)

beginnings of xinerama menu support.  just have to fix the remainder of the
"stay on screen as I scroll" bits"

-------------------------------------------------------------------------------

Mon Apr  3 16:46:07 PDT 2000
(Mandrake)

more fixes for xinerama-aware menus.

-------------------------------------------------------------------------------

Thu Apr  6 01:17:06 CEST 2000
(Saur)

Ran the default indent from ecvs on all files to get rid of differences
caused by it (should hopefully give smaller diffs in the future).
Removed all duplicated * * in comments (generated by indent sometimes).