@@ -4571,3 +4571,11 @@ Thu Apr  6 01:17:06 CEST 2000
 Ran the default indent from ecvs on all files to get rid of differences
 caused by it (should hopefully give smaller diffs in the future).
 Removed all duplicated * * in comments (generated by indent sometimes).
+
+-------------------------------------------------------------------------------
+
+Thu Apr  6 01:39:50 CEST 2000
+(Saur)
+
+Removed memory leaks from the dialog displaying a list of remembered
+windows, and fixed so E does not crash if you press escape in it.
